入門07のRouterを分けるところまで実施した。

--- a/src/app/heroine-detail.component.html
+++ b/src/app/heroine-detail.component.html
@@ -8,4 +8,5 @@
         <label>名前: </label>
         <input [(ngModel)]="heroine.name" placeholder="名前">
     </div>
+    <button (click)="goBack()">戻る</button>
 </div>
