--- a/src/app/dashboard.component.html
+++ b/src/app/dashboard.component.html
@@ -1,8 +1,11 @@
 <h3>トップヒロイン</h3>
 <div class="grid grid-pad">
-    <div *ngFor="let heroine of heroines" class="col-1-4">
+    <!-- リンクを動的に決めるため、routerLinkディレクティブを[]でくくり、値となるパスの情報を配列で加える。-->
+    <a *ngFor="let heroine of heroines" [routerLink]="['/detail', heroine.id]" class="col-1-4">
+    <!-- <div *ngFor="let heroine of heroines" class="col-1-4"> -->
         <div class="module heroine">
             <h4>{{heroine.name}}</h4>
         </div>
-    </div>
+    <!-- </div> -->
+    </a>
 </div>
