--- a/src/app/heroine-detail.component.html
+++ b/src/app/heroine-detail.component.html
@@ -9,4 +9,5 @@
         <input [(ngModel)]="heroine.name" placeholder="名前">
     </div>
     <button (click)="goBack()">戻る</button>
+    <button (click)="save()">保存</button>
 </div>
